--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
+    "axios": "^0.24.0",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.1.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "popper.js": "^1.16.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
